<resources>
    <string name="app_name">Step</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <integer name="default_value">0</integer>
    <string name="def_value">0</string>
    <string name="save">SAVE</string>
    <string name="high_score_label">High Score:</string>
    <string name="high_score_value">0</string>
    <string name="skip">+2</string>
    <string name="plus_one">+1</string>
    <string name="timeless_game">Wander Mode</string>
    <string name="timed_game">Marathon Mode</string>
    <string name="story_mode">Adventure Mode</string>
    <string name="save_file_reset">Pedometer Reset</string>
    <string name="title_activity_title">Title</string>
    <string name="title_activity_reset">Reset</string>
    <string name="copyright">Created by Devan Hawkins, 2015-2016</string>
    <string name="reset">Replay</string>
    <string name="game_over">Game Over</string>
    <string name="dialog_message">Save?</string>
    <string name="dialog_message_del">Are you sure you wish to Delete your save?</string>
    <string name="dialog_title">High Score</string>
    <string name="del_text">Delete Save</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tut_done">Ok, Got it!</string>
    <string name="welcome">Welcome to Step!</string>
    <string name="explain">Objective: Get the highest score you can using the +1 and +2 buttons.</string>
    <string name="explain2">Press either button to start.</string>
    <string name="explain3">Press +1 if the number increases by 1.</string>
    <string name="explain4">Press +2 if the number increases by 2!</string>
    <string name="explain5">The game ends when you press the wrong button. Good luck!</string>
    <string name="title_activity_timed">TimedActivity</string>
    <string name="title_activity_timed_tut">TimedTutActivity</string>
    <string name="welcome2">Get Ready to Run!</string>
    <string name="title_activity_pedometer">Pedometer</string>
    <string name="del_record">Clear Sale Data</string>
</resources>
